最后一次提交

--- a/Net66.Service/Views/AjaxGet.html
+++ b/Net66.Service/Views/AjaxGet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> <meta charset=" utf-8"> 
-	<title>è„šæœ¬ä¹‹å®¶</title> 
+	<title>½Å±¾Ö®¼Ò®¶</title> 
 	<style type="text/css">  
 	div{   width:200px;   height:200px;  } 
 	 </style>  
